Update canonical link

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ project_url:    http://openorienteering.org/apps/mapper/
 title:          OpenOrienteering Mapper User Manual
 description:    Manual page for the Open Source mapping software
 baseurl:        /mapper-manual
-production_url: http://openorienteering.github.io/mapper-manual
+production_url: http://www.openorienteering.org/mapper-manual
 markdown:       kramdown
 exclude:
   - Gemfile
