Update links to use https where possible

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 project_name:   OpenOrienteering Mapper
-project_url:    http://openorienteering.org/apps/mapper/
+project_url:    https://www.openorienteering.org/apps/mapper/
 title:          OpenOrienteering Mapper User Manual
 description:    Manual page for the Open Source mapping software
 baseurl:        /mapper-manual
-production_url: http://www.openorienteering.org/mapper-manual
+production_url: https://www.openorienteering.org/mapper-manual
 markdown:       kramdown
 exclude:
   - Gemfile
