Switch to hunspell
Can't make UTF-8 work with aspell.
Updated wordlist to make the spell check succeed again.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,9 @@ jobs:
         python -m pip install --upgrade pip setuptools
         python -m pip install pyspelling
         # Install any additional libraries required: additional plugins, documentation building libraries, etc.
-    - name: Install aspell
+    - name: Install hunspell
       run: |
-        sudo apt-get install aspell aspell-en
+        sudo apt-get install hunspell hunspell-en-us
     - name: Spell check
       run: |
-        python -m pyspelling
+        python -m pyspelling --spellchecker hunspell
